--- a/src/JRovnyBlog/ClientApp/package.json
+++ b/src/JRovnyBlog/ClientApp/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "publish": "node --max_old_space_size=32000 ./node_modules/@angular/cli/bin/ng build --prod --base-href /blog/ --deploy-url /blog/"
+    "publish": "node --max_old_space_size=32000 ./node_modules/@angular/cli/bin/ng build --prod"
   },
   "private": true,
   "dependencies": {
