--- a/src/JRovnyBlog/JRovnyBlog.csproj
+++ b/src/JRovnyBlog/JRovnyBlog.csproj
@@ -17,7 +17,10 @@
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0-rc2" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Api\Tags\Models\" />
   </ItemGroup>
 </Project>
