--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Chrome",
-      "url": "http://localhost:4200",
+      "url": "https://localhost:5001",
       "webRoot": "${workspaceFolder}/src/JRovnyBlog/ClientApp"
     },
     {
