--- a/src/JRovnyBlog/ClientApp/package.json
+++ b/src/JRovnyBlog/ClientApp/package.json
@@ -9,7 +9,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish": "node --max_old_space_size=32000 ./node_modules/@angular/cli/bin/ng build --prod",
-    "staging": "node --max_old_space_size=32000 ./node_modules/@angular/cli/bin/ng build --configuration=staging"
+    "staging": "node --max_old_space_size=32000 ./node_modules/@angular/cli/bin/ng build --configuration=staging",
+    "dev:ssr": "ng run jrovny-blog:serve-ssr",
+    "serve:ssr": "node dist/jrovny-blog/server/main.js",
+    "build:ssr": "ng build --prod && ng run jrovny-blog:server:production",
+    "prerender": "ng run jrovny-blog:prerender"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +27,7 @@
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/platform-server": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -33,6 +38,8 @@
     "@ngrx/entity": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "@nguniversal/express-engine": "^9.0.2",
+    "express": "^4.15.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -43,6 +50,8 @@
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
     "@ngrx/schematics": "^10.0.1",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
